<resources>
    <string name="app_name">JustGeek</string>
    <string name="page_indicator_text_sign_up" translatable="false">%1$d/5</string>
    <string name="title_sing_up" translatable="false">Cadastro</string>
    <string name="subtitle_personal_data" translatable="false">Dados pessoais</string>
    <string name="subtitle_contact_data" translatable="false">Dados de contato</string>
    <string name="button_next_sing_up">Continuar</string>
    <string name="button_back_sing_up">Voltar</string>
    <string name="title_name">Insira seu nome:</string>
    <string name="title_last_name">:</string>
    <string name="title_cpf">Insira seu CPF:</string>
    <string name="title_birthdate">Insira sua data de nascimento:</string>
    <string name="title_email" translatable="false">Insira seu email:</string>
    <string name="title_cellphone" translatable="false">Insira seu número de celular:</string>
    <string name="checkbox_newsletter" translatable="false">Desejo receber novidades e cupons pelo email</string>
    <string name="error_message" translatable="false">%1$s</string>
    <string name="subtitle_access_key" translatable="false">Chave de acesso</string>
    <string name="title_password" translatable="false">Crie uma senha:</string>
    <string name="title_confirm_password" translatable="false">Confirme a senha:</string>
    <string name="title_finish" translatable="false">Oba!\nSua conta na</string>
    <string name="title_finish_2" translatable="false">foi criada com \nsucesso!</string>
    <string name="button_sing_up_login_text" translatable="false">Fazer Login</string>
    <string name="title_just_geek_tutorial">Just Geek - Quem somos</string>
    <string name="text_who_we_are">A JustGeek é um ecommerce que oferece uma variedade de estampas
        que vão da pop culture até o mais oldschool.  Além de tudo, os produtos
        são lindos e de qualidade.</string>
    <string name="title_your_ideas_our_trace">Suas ideias, nosso traço</string>
    <string name="text_your_ideas_our_trace">Você pode customizar suas roupas do modo que quiser.
        É só deixar a criatividade fluir e conversar com a nossa equipe. Aqui, você com certeza
        vai achar o que gosta.</string>
    <string name="title_staff_artists">STAFF - Artistas</string>
    <string name="text_staff_artists">Você pode se comunicar com a equipe de artistas da
        JustGeek para fazer seus pedidos customizados. Tenha algo único, só para você.
        É fácil, rápido e sem estresse.</string>
    <string name="title_see_you_later">Até mais ver</string>
    <string name="text_see_you_later">Aguardamos ansiosamente pelos seus pedidos, seja de qual
        parte do Brasil forem. Agora, explore e aproveite nosso app, com uma variedade
        imensa de estampas.  A JustGeek agradece!</string>
    <string name="custom_how_you_want">Customize suas roupas como quiser</string>
    <string name="title_promotion">PROMOÇÕES</string>
    <string name="title_product_name">%1$2</string>
    <string name="subtitle_old_price" translatable="false">R$ %1$.2f</string>
    <string name="subtitle_new_price" translatable="false">R$ %1$.2f</string>
    <string name="tag_promotion" translatable="false">%1$d%</string>
    <string name="title_popular">POPULARES</string>
    <string name="title_assessments">AVALIAÇÕES</string>
    <string name="title_name_client">%1$s</string>
    <string name="text_comment_client">comentário</string>
    <string name="title_coupon_homepage">Oi, você vem sempre aqui?</string>
    <string name="subtitle_coupon_homepage">Caso você esteja dando “só uma olhadinha”,
        que tal um cupom para impulsionar sua primeira compra?</string>
    <string name="coupon_code" translatable="false">%1$s</string>
    <string name="title_showcase_category">Categorias - Em Alta</string>
    <string name="subtitle_showcase_category">Que tal um mar de variedades?</string>
    <string name="title_showcase_promotion">Promoções da semana</string>
    <string name="subtitle_showcase_promotion">Confira os produtos disponíveis</string>
    <string name="title_showcase_faq">FAQ - Suporte</string>
    <string name="subtitle_showcase_faq">Precisa de uma ajudinha?</string>
    <string name="title_showcase_be_a_partner">Seja um parceiro</string>
    <string name="subtitle_showcase_be_a_partner">Faça parte da nossa equipe de artistas</string>
    <string name="title_profile_sidemenu">Perfil</string>
    <string name="title_configuration_sidemenu">Configurações</string>
    <string name="title_notification_sidemenu">Notificações</string>
    <string name="title_buy_sidemenu">Compras</string>
    <string name="title_category_sidemenu">Categorias</string>
    <string name="title_favorites_sidemenu">Favoritos</string>
    <string name="title_custom_sidemenu">Customização</string>
    <string name="title_artist_gallery_sidemenu">Galeria de Artistas</string>
    <string name="title_coupons_sidemenu">Cupons</string>
    <string name="title_faq_sidemenu">FAQ - Perguntas Frequentes</string>
    <string name="title_about_us_sidemenu">Sobre nós</string>
    <string name="title_logout_sidemenu">Sair</string>
    <string name="title_showcase_category_page">CARTOONS - Séries animadas</string>
    <string name="subtitle_showcase_category_page">Coleção de desenhos animados como Hora de
    Aventura, Apenas um Show, Castlevania e mais.</string>
    <string name="title_filter_category_page">FILTROS</string>
    <string name="title_products_category_page">TODOS OS PRODUTOS</string>
    <string name="title_filter_choose_t_shirt_category_page">Camiseta</string>
    <string name="title_filter_choose_sweatshirt_category_page">Moletom</string>
    <string name="title_filter_choose_pants_category_page">Calça</string>
    <string name="title_filter_choose_custom_category_page">Custom</string>
    <string name="title_filter_price_category_page">Preço</string>
    <string name="subtitle_filter_price_bold_category_page" translatable="false">R$ %1$.2f</string>
    <string name="subtitle_filter_start_price_category_page" translatable="false">R$ %1$.2f</string>
    <string name="subtitle_filter_end_price_category_page" translatable="false">R$ %1$.2f</string>
    <string name="title_filter_tam_category_page">Tamanho</string>
    <string name="subtitle_filter_tam_choosed" translatable="false">%1$s</string>
    <string name="subtitle_filter_tam_p" translatable="false">P</string>
    <string name="subtitle_filter_tam_m" translatable="false">M</string>
    <string name="subtitle_filter_tam_g" translatable="false">G</string>
    <string name="subtitle_filter_tam_gg" translatable="false">GG</string>
    <string name="title_filter_title_category_page">Título</string>
    <string name="subtitle_filter_title_category_page">Hora de Aventura</string>
    <string name="title_popular_artists">ARTISTAS POPULARES</string>
    <string name="title_name_artist_card" translatable="false">%1$s</string>
    <string name="subtitle_quantity_arts">%1$d Exemplares</string>
    <string name="title_artist_biography">%1$s</string>
    <string name="title_art_from_artist">Por: %1$s</string>
    <string name="title_similar_artists">ARTSITAS SIMILARES</string>
    <string name="subtitle_description_art">Arte feita por: %1$s</string>
    <string name="title_other_arts">OUTRAS ARTES DE %1$s</string>
    <string name="title_button_do_request">FAZER PEDIDO</string>
    <string name="title_choose_tam">Escolha o tamanho da sua camiseta:</string>
    <string name="title_choose_color">Escolha a cor da sua camiseta:</string>
    <string name="title_request_revision">Revisão do pedido:</string>
    <string name="subtitle_tam_choosed">Tamanho: %1$s</string>
    <string name="subtitle_color_choosed">Cor: %1$s</string>
    <string name="subtitle_art_choosed">Arte:</string>
    <string name="subtitle_artist_choosed">Artista:</string>
    <string name="title_button_finish_request">FINALIZAR PEDIDO</string>
    <string name="title_finalize_request_question">Deseja finalizar o pedido?</string>
    <string name="title_button_finalize_yes">Sim</string>
    <string name="title_button_not_finalize">Não</string>
    <string name="title_faq_toolbar" translatable="false">FAQ</string>
    <string name="title_faq_option_product_custom">Produtos customizados</string>
    <string name="text_faq_answer_option_product_custom">Produtos customizados: para fazer um pedido de um produto custumizado,
        é necessário acessar a página do artista de sua preferência, e assim, selecionar a arte
        que mais combina com você ;)</string>
    <string name="title_faq_option_payment_promotion">Pagamento e promoções</string>
    <string name="text_faq_answer_option_payment_promotion">Pagamento e promoções: o processo de pagamento da Just Geek é
        integrado com o Mercado Pago, incluindo as seguintes formas de pagamento: boleto, débito
        e crédito. Para conseguir seus descontos, colecione cupons de descontos que surgem pelo APP,
        eles tem data de expiração ;)</string>
    <string name="title_faq_option_return_refund">Devolução e reembolso</string>
    <string name="text_faq_answer_option_return_refund">Devolução e reembolso: caso o produto tenha chegado em sua
        residência com defeito, tamanho inadequado, estampa/cor errada, é possÍvel contatar a
        Just Geek através do nosso email, temos um prazo de 2 a 4 dias para revisar o email,
        e mais os dias estimados pelo fretista. A taxa de envio fica por nossa conta ;)</string>
    <string name="title_faq_option_delivery">Entrega</string>
    <string name="text_faq_answer_option_delivery">Entrega: todo o sistema de entrega dos produtos da
        Just Geek é feito em parceria com a Correios, o preço do frete irá depender
        da distância entre o estoque e sua residência ;)</string>
    <string name="title_faq_option_account">Conta</string>
    <string name="text_faq_answer_option_account">Conta: todas as suas informações podem ser acessadas
        através do botão “Perfil”, podendo visualizar suas informações atuais, alterá - los
        através das configurações da conta.</string>
    <string name="subtitle_forgot_password">Esqueci minha senha</string>
    <string name="title_button_signin">Entrar</string>
    <string name="title_button_signup">Cadastrar</string>
    <string name="subtitle_error_invalid_email">Email inválido</string>
    <string name="subtitle_error_invalid_password">Senha inválida</string>
    <string name="title_sign_in_input_email" translatable="false">Email</string>
    <string name="title_sign_in_input_password">Senha</string>
    <string name="title_my_orders_toolbar">Meus pedidos</string>
    <string name="title_my_order_waiting_payment">Aguardando pagamento</string>
    <string name="title_my_order_order_sent">Pedido enviado</string>
    <string name="title_my_order_order_delivered">Pedido entregue</string>
    <string name="title_my_order_order_canceled">Pedido cancelado</string>
    <string name="title_my_order_order_detail">Detalhes do pedido</string>
    <string name="title_my_order_released">Realizado em %1$d/%2$d/%3$d</string>
    <string name="title_my_order_product_quantity">+%1$d itens</string>
    <string name="title_version_app_login">Versão %1$s</string>
    <string name="title_justgeek_aboutus">JustGeek - Sobre Nós</string>
    <string name="subtitle_aboutus">O que é a JustGeek?</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_category">Categoria</string>
    <string name="title_favorites">Favoritos</string>
    <string name="title_profile">Perfil</string>
    <string name="size_pp">PP</string>
    <string name="size_p">P</string>
    <string name="size_m">M</string>
    <string name="size_g">G</string>
    <string name="size_gg">GG</string>
    <string name="subtitle_size">Tamanho: %1$s</string>
    <string name="subtitle_color">Cor: %1$s</string>
    <string name="subtitle_author" translatable="false">Artista: %1$s</string>
</resources>