<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/pattern_dark">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/dark_purple"
        app:title="JustGEEK"
        app:navigationIcon="@drawable/ic_toolbar_nav_icon"
        app:titleTextAppearance="@style/Logo_Text"
        app:titleTextColor="@color/pattern_light"/>

    <ImageView
        android:id="@+id/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_search"
        app:layout_constraintTop_toTopOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="@id/toolbar"
        app:layout_constraintEnd_toStartOf="@id/shop"
        android:layout_marginEnd="@dimen/spacing_sm"/>

    <ImageView
        android:id="@+id/shop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_shop"
        app:layout_constraintTop_toTopOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="@id/toolbar"
        app:layout_constraintEnd_toEndOf="@id/toolbar"
        android:layout_marginEnd="@dimen/spacing_xsl"/>

    <ImageView
        android:layout_width="@dimen/spacing_minimum"
        android:layout_height="@dimen/spacing_zero"
        android:src="@drawable/bg_light_rounded"
        app:layout_constraintEnd_toStartOf="@id/search"
        app:layout_constraintTop_toTopOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="@id/toolbar"
        android:layout_marginVertical="@dimen/spacing_medium"
        android:layout_marginEnd="@dimen/spacing_sm"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_size_artist_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:paddingTop="@dimen/spacing_ms"
        android:paddingLeft="@dimen/spacing_ms"
        android:paddingRight="@dimen/spacing_ms"
        android:layout_marginStart="@dimen/spacing_medium"
        android:layout_marginEnd="@dimen/spacing_medium"
        android:background="@drawable/bg_container_light"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="@+id/toolbar">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title_size_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_choose_tam"
            android:textAppearance="@style/Exo2_SemiBold_Title_Promotion_Bag"
            app:layout_constraintStart_toStartOf="@+id/container_size_artist_page"
            app:layout_constraintTop_toTopOf="@+id/container_size_artist_page"/>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group_size_product_artist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            app:singleSelection="true"
            app:layout_constraintStart_toStartOf="@+id/container_size_artist_page"
            app:layout_constraintTop_toBottomOf="@+id/title_size_product">

            <com.google.android.material.chip.Chip
                android:id="@+id/tamanhoPP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/size_pp"
                style="@style/CustomChipStyle"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/tamanhoP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/size_p"
                style="@style/CustomChipStyle"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/tamanhoM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/size_m"
                style="@style/CustomChipStyle"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/tamanhoG"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/size_g"
                style="@style/CustomChipStyle"/>

            <com.google.android.material.chip.Chip
                android:id="@+id/tamanhoGG"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/size_gg"
                style="@style/CustomChipStyle"/>

        </com.google.android.material.chip.ChipGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_color_artist_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:padding="@dimen/spacing_ms"
        android:layout_marginStart="@dimen/spacing_medium"
        android:layout_marginEnd="@dimen/spacing_medium"
        android:background="@drawable/bg_container_light"
        app:layout_constraintTop_toBottomOf="@+id/container_size_artist_page"
        app:layout_constraintStart_toStartOf="@+id/container_size_artist_page"
        app:layout_constraintEnd_toEndOf="@+id/container_size_artist_page">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title_color_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_choose_color"
            android:textAppearance="@style/Exo2_SemiBold_Title_Promotion_Bag"
            app:layout_constraintStart_toStartOf="@+id/container_color_artist_page"
            app:layout_constraintTop_toTopOf="@+id/container_color_artist_page"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_color_product">
            <RadioButton
                android:id="@+id/color_black_artist_request"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_s"
                android:button="@drawable/custom_black_shirt" />

            <RadioButton
                android:id="@+id/color_white_artist_request"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_s"
                android:layout_marginLeft="@dimen/spacing_xs"
                android:button="@drawable/custom_radio_white"/>
        </RadioGroup>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_revision_request_artist_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:padding="@dimen/spacing_ms"
        android:layout_marginStart="@dimen/spacing_medium"
        android:layout_marginEnd="@dimen/spacing_medium"
        android:background="@drawable/bg_container_light"
        app:layout_constraintTop_toBottomOf="@+id/container_color_artist_page"
        app:layout_constraintStart_toStartOf="@+id/container_color_artist_page"
        app:layout_constraintEnd_toEndOf="@+id/container_size_artist_page">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title_revision_request_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_request_revision"
            android:textAppearance="@style/Exo2_SemiBold_Title_Promotion_Bag"
            app:layout_constraintStart_toStartOf="@+id/container_revision_request_artist_page"
            app:layout_constraintTop_toTopOf="@+id/container_revision_request_artist_page"/>

        <TextView
            android:id="@+id/tamanho"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/title_revision_request_product"
            app:layout_constraintTop_toBottomOf="@id/title_revision_request_product"
            android:layout_marginTop="@dimen/spacing_16"
            android:text="@string/subtitle_size"
            style="@style/Exo2_Semibold_Title_Showcase"
            android:textColor="@color/pattern_light"/>
        <TextView
            android:id="@+id/cor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/title_revision_request_product"
            app:layout_constraintTop_toBottomOf="@id/tamanho"
            android:layout_marginTop="@dimen/spacing_16"
            android:text="@string/subtitle_color"
            style="@style/Exo2_Semibold_Title_Showcase"
            android:textColor="@color/pattern_light"/>
        <TextView
            android:id="@+id/artista"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/title_revision_request_product"
            app:layout_constraintTop_toBottomOf="@id/cor"
            android:layout_marginTop="@dimen/spacing_16"
            android:text="@string/subtitle_author"
            style="@style/Exo2_Semibold_Title_Showcase"
            android:textColor="@color/pattern_light"/>

        <ImageView
            android:layout_width="@dimen/spacing_zero"
            android:layout_height="wrap_content"
            tools:src="@drawable/art_camiseta"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/tamanho"
            android:layout_marginStart="@dimen/spacing_ml"
            android:scaleType="centerCrop"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_finish_request_artist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_bottom_navigation"
        android:textAppearance="@style/Exo2_Semibold_Button_Text_Spaced"
        android:text="@string/title_button_finish_request"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/voltar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_back_button"
        android:textAppearance="@style/Exo2_Semibold_Button_Text_Spaced"
        android:text="CANCELAR"
        app:layout_constraintBottom_toTopOf="@id/button_finish_request_artist"/>


</androidx.constraintlayout.widget.ConstraintLayout>

