<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainErrorEmailLoginActivity"
    android:background="@mipmap/background_login">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="39dp"
        android:layout_height="54dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_question"
        android:id="@+id/toolbar_email_error_question_login"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/title_just_geek_login_error_email"
        android:layout_width="169dp"
        android:layout_height="67dp"
        android:layout_marginTop="@dimen/spacing_big"
        android:src="@mipmap/just_geek"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_email_error_question_login" />

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="373dp"
        android:layout_height="30dp"
        android:hint="@string/title_sign_in_input_email"
        android:background="@drawable/bg_light_rounded"
        android:layout_marginTop="@dimen/spacing_big"
        android:paddingStart="@dimen/spacing_medium"
        android:textAppearance="@style/Exo2_Regular_Subtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf=
            "@+id/title_just_geek_login_error_email"
        android:id="@+id/input_email_login_error"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="18dp"
        android:layout_height="39dp"
        android:src="@drawable/ic_refuse_background_pink"
        android:layout_marginTop="@dimen/spacing_sm"
        app:layout_constraintStart_toStartOf="@+id/input_email_login_error"
        app:layout_constraintTop_toBottomOf="@+id/input_email_login_error"
        android:id="@+id/icon_wrong_email"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_sm"
        android:text="@string/subtitle_error_invalid_email"
        android:textColor="@color/hot_pink"
        android:textAppearance="@style/Exo2_Regular_Subtitle"
        app:layout_constraintBottom_toBottomOf="@+id/icon_wrong_email"
        app:layout_constraintStart_toEndOf="@+id/icon_wrong_email"
        app:layout_constraintTop_toTopOf="@+id/icon_wrong_email" />

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="373dp"
        android:layout_height="30dp"
        android:background="@drawable/bg_light_rounded"
        android:hint="@string/title_sign_in_input_password"
        android:paddingStart="@dimen/spacing_sm"
        android:textAppearance="@style/Exo2_Regular_Subtitle"
        android:layout_marginTop="@dimen/spacing_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView2"
        android:id="@+id/input_password_error_email_login"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/appCompatButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_max_big"
        android:background="@drawable/bg_button_next"
        android:text="@string/title_button_signin"
        android:textColor="@color/pattern_light"
        android:textAppearance="@style/Exo2_Semibold_Button_Text"
        app:layout_constraintEnd_toEndOf="@+id/input_password_error_email_login"
        app:layout_constraintStart_toStartOf="@+id/input_password_error_email_login"
        app:layout_constraintTop_toBottomOf="@+id/input_password_error_email_login" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/appCompatButton2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_big"
        android:background="@drawable/bg_button_sign_up"
        android:text="@string/title_button_signup"
        android:textColor="@color/pattern_light"
        android:textAppearance="@style/Exo2_Semibold_Button_Text"
        app:layout_constraintEnd_toEndOf="@+id/appCompatButton"
        app:layout_constraintStart_toStartOf="@+id/appCompatButton"
        app:layout_constraintTop_toBottomOf="@+id/appCompatButton" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_version_app_login"
        android:textColor="@color/dark_gray"
        android:textAppearance="@style/Exo2_Regular_Subtitle"
        android:layout_marginBottom="@dimen/spacing_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/appCompatButton2"
        app:layout_constraintStart_toStartOf="@+id/appCompatButton2"/>

</androidx.constraintlayout.widget.ConstraintLayout>